Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextIntObj.quorum
class Main
    action Main
        Integer v
        v:SetValue(5)
        Test(v)
    end

    action Test(text var)
    end
end
